--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       body { font-family: 'Droid Serif'; }
       h1, h2, h3 {
         font-family: 'Yanone Kaffeesatz';
-        font-weight: normal;
+        font-weight: bold;
       }
       .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
       .footnote {
