--- a/balticyachts.html
+++ b/balticyachts.html
@@ -86,6 +86,9 @@ background-image: url(images/ecosystem_017s.png)
 - Validate some killer use cases together on real environment
 
 ---
+background-image: url(images/ericsson1.png)
+
+---
 background-image: url(https://upload.wikimedia.org/wikipedia/commons/thumb/e/e9/Ericsson_logo.svg/500px-Ericsson_logo.svg.png)
 
     </textarea>
